--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,22 +6,13 @@ layout: default
 <body class="{%- if page.categories -%}{{ page.categories }}{%- endif -%}" id="{%- if page.status -%}{{ page.status }}{%- endif -%}">
 	<div class="container">
 		<article class="main">
-
 				{{ content }}
-
 		</article>
 
 
 
 	</div>
-	<script src="{{'/assets/vendor/jquery.min.js' | prepend: site.baseurl}}"></script>
-	<script src="{{'/assets/vendor/popper.min.js' | prepend: site.baseurl}}"></script>
-	<script src="{{'/assets/vendor/bootstrap.min.js' | prepend: site.baseurl}}"></script>
-	<script>
-		$(function () {
-			$('[data-toggle="tooltip"]').tooltip()
-		});
-	</script>
+{% include scripts.html %}
 </body>
 
 </html>
