--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,5 @@
 --- 
 @import "vendor/bootstrap/scss/bootstrap";
 @import "vendor/animatewithsass/animate.scss";
-@import "layout";
+@import "typography.scss";
+@import "layout.scss";
