--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -6,3 +6,15 @@
 	width: 200px;
 	height: 200px;
 }
+
+body {
+	font-family: standard-book;
+}
+
+.container {
+	width: 600px;
+}
+
+h1 {
+	font-weight: bold;
+}
