--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,5 +2,5 @@
 --- 
 @import "vendor/bootstrap/scss/bootstrap";
 @import "vendor/animatewithsass/animate.scss";
-@import "typography.scss";
+@import "basic.scss";
 @import "layout.scss";
