--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,30 @@ layout: default
 {% include head.html %}
 <body class="{%- if page.categories -%}{{ page.categories }}{%- endif -%}" id="{%- if page.status -%}{{ page.status }}{%- endif -%}">
 	<div class="container">
-		<nav>
+
+		<sidebar>
 			<div class="logo">{% include logos/ayudamutua.svg %}</div>
-		</nav>
+		</sidebar>
 		<article class="main">
-				{{ content }}
+
+<h1>{{site.title}}</h1>
+<h3>{{site.description}}</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
+				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
+				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
+				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
+				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
+				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
+				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
+				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
+				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
+				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
+				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
+				
 		</article>
 
 
