--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,30 +11,65 @@ layout: default
 		</sidebar>
 		<article class="main">
 
-<h1>{{site.title}}</h1>
-<h3>{{site.description}}</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
-				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
-				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
-				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
-				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
-				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
-				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
-				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
-				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ad magnam, totam minus aliquid impedit ut aperiam reiciendis, provident ratione!</p>
-				<p>Necessitatibus sint magni, iusto beatae maiores a cupiditate labore eaque reprehenderit aliquam quibusdam vitae at ea, quis sed, explicabo. Hic!</p>
-				<p>Nemo fugit obcaecati impedit suscipit veritatis nobis eaque totam, incidunt praesentium aliquam ex doloribus eum placeat ut dolor! Libero, voluptatibus.</p>
-				
+			<h1>{{site.title}}</h1>
+
+			<section class="about">
+				<p>We're a grassroots community group that connects neighbors in the Bushwick area of Brooklyn affected by the Covid-19 pandemic to organizations and volunteers in the area that are able to relieve them where the government has not yet been able to.</p>
+			</section>
+<section class="help">
+<div>
+		<h3>Submit A Request For Assistance</h3>
+<h3 class="es">Formulario Para Ayuda</h3>
+<a href="https://bit.ly/helpBAM" class="btn">Request Help</a>
+</div>
+<div>
+	<h3>Sign Up To Volunteer!</h3>
+<h3 class="es">
+¡Regístrate para ser voluntario!</h3>
+<a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Volunteer</a>
+</div>
+<div><h3>Donate To Support Your Community</h3>
+<h3 class="es">Done para apoyar a su comunidad</h3>
+<a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Donate</a></div>
+
+		
+
+
+			 
+</section>
+
+			<section class="mission">
+				<h2>Mission</h2>
+				<p>Bushwick Ayuda Mutua is a grassroots, volunteer-led network of volunteers working collaboratively and connecting neighbors to respond to the needs of Bushwick neighbors during this time of crisis, including groceries deliveries, PPE and mask distribution, medicine and other supplies to those impacted by Covid-19 with an emphasis on vulnerable communities, elders, undocumented people, low-income families with children and those sick or positive to Covid-19. </p>
+
+				<p>We serve Bushwick community through neighbor-to-neighbor and mass bulk deliveries. Our work is possible thanks to mutual aid grassroots donations, as well in partnership with community based organizations, elected officials and groups such as MayDay Space, Hungry Monk, Latinos Unidos, and others.</p>
+			</section> 
+
+			<section class="vision">
+				<h2>Vision</h2>
+
+				<p>Bushwick Ayuda Mutua works towards ensuring that residents of our community have their most basic needs met, as well access to resources and information to thrive during Covid-19 and beyond. </p>
+
+
+				<p>We aspire to live in a community where no one lives in hunger, when people have access to livable wages, affordable and safe housing and health care so every person and family can live autonomous and empowered lives. </p>
+
+
+				<p>BAM is a space for us to create frameworks within Bushwick for us to sustainably take care of and empower each other, and to promote accessibility in ways our community members were left without before and during the COVID-19 crisis</p>
+
+
+				<p class="highlight">While we strive for autonomy, we can only achieve this together</p>
+				<div class="sig">{% include logos/ayudamutua2.svg %}</div>
+			</section>
+
+
+
+
 		</article>
 
 
 
 	</div>
-{% include scripts.html %}
+	{% include scripts.html %}
 </body>
 
 </html>
