--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
-	<link rel="apple-touch-icon" sizes="180x180"
+	<link rel="icon" href="assets/favicons/favicon.svg">
+<!-- 	<link rel="apple-touch-icon" sizes="180x180"
 		href="{{'/assets/favicons/apple-touch-icon.png' | prepend: site.baseurl}}">
 	<link rel="icon" type="image/png" sizes="32x32"
 		href="{{'/assets/favicons/favicon-32x32.png' | prepend: site.baseurl}}">
@@ -10,7 +11,7 @@
 	<link rel="shortcut icon" href="{{'/assets/favicons/favicon.ico' | prepend: site.baseurl}}">
 	<meta name="msapplication-TileColor" content="{{site.basecolor}}">
 	<meta name="msapplication-config" content="{{'/assets/favicons/browserconfig.xml' | prepend: site.baseurl}}">
-	<meta name="theme-color" content="{{site.basecolor}}">
+	<meta name="theme-color" content="{{site.basecolor}}"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{%- if page.title -%}
 	<title>{{ page.title }}</title>
