--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: default
 	<div class="container">
 
 		<sidebar>
-			<div class="logo">{% include logos/ayudamutua.svg %}</div>
+			<a href="/" class="logo">{% include logos/ayudamutua.svg %}</a>
 		</sidebar>
 		<article class="main">
 
@@ -17,20 +17,33 @@ layout: default
 				<p>We're a grassroots community group that connects neighbors in the Bushwick area of Brooklyn affected by the Covid-19 pandemic to organizations and volunteers in the area that are able to relieve them where the government has not yet been able to.</p>
 			</section>
 <section class="help">
-<div>
+	<div class="grid">
+		<div>
 		<h3>Submit A Request For Assistance</h3>
 <h3 class="es">Formulario Para Ayuda</h3>
-<a href="https://bit.ly/helpBAM" class="btn">Request Help</a>
 </div>
 <div>
 	<h3>Sign Up To Volunteer!</h3>
 <h3 class="es">
 ¡Regístrate para ser voluntario!</h3>
+</div>
+<div>
+	<h3>Donate To Support Your Community</h3>
+<h3 class="es">Done para apoyar a su comunidad</h3>
+</div>
+
+	</div>
+		<div class="grid">
+		<div>
+<a href="https://bit.ly/helpBAM" class="btn">Request Help</a>
+</div>
+<div>
 <a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Volunteer</a>
 </div>
-<div><h3>Donate To Support Your Community</h3>
-<h3 class="es">Done para apoyar a su comunidad</h3>
+<div>
 <a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Donate</a></div>
+
+	</div>
 
 		
 
@@ -55,14 +68,12 @@ layout: default
 
 
 				<p>BAM is a space for us to create frameworks within Bushwick for us to sustainably take care of and empower each other, and to promote accessibility in ways our community members were left without before and during the COVID-19 crisis</p>
-
-
-				<p class="highlight">While we strive for autonomy, we can only achieve this together</p>
-				<div class="sig">{% include logos/ayudamutua2.svg %}</div>
 			</section>
 
-
-
+<section class="highlight">
+	<p>While we strive for autonomy, we can only achieve this together</p>
+				<div class="sig">{% include logos/ayudamutua2.svg %}</div>
+</section>
 
 		</article>
 
