--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,15 +4,31 @@
 
 $gap: 30px;
 $logo: 120px;
+$breakpoint: 800px;
 
 .logo svg {
+	@media (min-width: $breakpoint) {
 	width: 100%;
+}
+	@media (max-width: $breakpoint) {
+	width: 100px;	
+	height: 100px;
+
+}
 }
 
 
 .logo {
+	@media (min-width: $breakpoint) {
 	position: sticky;
 	top: $gap;
+}
+	display: block;
+		@media (max-width: $breakpoint) {
+text-align: center;
+padding-top: $gap;
+
+}
 }
 
 body {
@@ -20,52 +36,75 @@ body {
 }
 
 .container {
-	width: 700px;
+
+@media (min-width: $breakpoint) {
+		width: 700px;
 	display: grid;
 	padding: $gap;
 grid-gap: $gap;
 grid-template-columns: $logo 1fr;
+	
+}
 }
 section {
 	margin-top: $gap;
 	padding-top: $gap;
 	border-top: dotted 2px $color-2;
 }
-section.help {
-	width: 100%;
+		@media (max-width: $breakpoint) {
+			h1 {
+					margin-top: $gap;
+	padding-top: $gap;
+	border-top: dotted 2px $color-2;
+			}
+			}
+section.help .grid {
 	display: grid;
-grid-gap: $gap;
+grid-gap: ($gap / 2);
 grid-template-columns: 1fr 1fr 1fr;
 .btn {
-	background-color: $color-1;
-	padding: 5px $gap;
+	background-color: $color-2;
+	padding: 5px;
 	text-align: center;
 	displaY: block;
+	font-size: 15px;
+	font-weight: bold;
+	box-shadow: 0 4px 0px rgba(0, 0, 0, 0.1);
+transition: all 300ms ease-out;
+border-radius: 0;
+	&:hover {
+		box-shadow: 0 2px 0px rgba(0, 0, 0, 0.1);
+		background-color: $color-1;
+
+	}
 }
 h3 {
-	font-size: 20px;
-	color: $color-1;
+	font-size: 15px;
+	line-height: 100%;
 	&.es {
 		  font-style: italic;
-		  color: $color-2;
+
+		padding-bottom: ($gap / 2);
 	}
 }
 }
 
 .highlight {
+margin-top: $gap;
 	@extend h4;
-	padding: ($gap * 2);
 	color: $color-1;
 	  font-style: italic;
 }
 
 .sig {
+
 	text-align: center;
-	margin-bottom: $gap;
 	svg {
 	width: ($gap * 2);
 	height: ($gap * 2);
-
-
+	@media (max-width: $breakpoint) {
+			width: ($gap * 1.5);
+	height: ($gap * 1.5);
+	}
 }
 }
