--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,10 @@ layout: default
 	</div>
 		<div class="grid">
 		<div>
-<a href="https://bit.ly/helpBAM" class="btn">Request Help</a>
+<a href="https://bit.ly/BAMrequest" class="btn">Request Help</a>
 </div>
 <div>
-<a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Volunteer</a>
+<a href="https://bit.ly/BAM-sign-up" class="btn">Volunteer</a>
 </div>
 <div>
 <a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Donate</a></div>
