--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: default
 	<div class="container">
 
 		<sidebar>
-			<a href="/" class="logo">{% include logos/ayudamutua.svg %}</a>
+			<a href="/" class="logo">{% include logos/BAM.svg %}</a>
 		</sidebar>
 		<article class="main">
 
