--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,12 +5,12 @@
 		$(function () {
 			$('[data-toggle="tooltip"]').tooltip()
 		});
-			new WOW({
-                      boxClass:     'wow',      // default
-                      animateClass: 'animated', // default
-                      offset:       0,          // default
-                      mobile:       true,       // default
-                      live:         true        // default
-                    }
-			).init();
+			// new WOW({
+   //                    boxClass:     'wow',      // default
+   //                    animateClass: 'animated', // default
+   //                    offset:       0,          // default
+   //                    mobile:       true,       // default
+   //                    live:         true        // default
+   //                  }
+			// ).init();
 	</script>
