--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,10 @@ layout: default
 			<a href="/" class="logo">{% include logos/BAM.svg %}</a>
 <nav>
 	<ul>
-		<li><a href="/">home</a></li>
-		<li><a href="https://instagram.com/bushwickayudamutua">instagram</a></li>
-		<li><a href="mailto:bushwickayudamutua@gmail.com">email</a></li>
+		<li><a href="https://www.facebook.com/bushwickayuda/" target="_blank">Facebook</a></li>
+		<li><a href="https://twitter.com/BushwickAyuda" target="_blank">Twitter</a></li>
+		<li><a href="https://instagram.com/bushwickayudamutua" target="_blank">Instagram</a></li>
+		<li><a href="mailto:bushwickayudamutua@gmail.com">Email</a></li>
 	</ul>
 </nav>
 		</sidebar>
