--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -167,3 +167,12 @@ sidebar {
 	}
 
 }
+
+.languages {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: $gap;
+	.language-es {
+		font-style: italic;
+	}
+}
