--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<meta name="msapplication-TileColor" content="{{site.basecolor}}">
 	<meta name="msapplication-config" content="{{'/assets/favicons/browserconfig.xml' | prepend: site.baseurl}}">
 	<meta name="theme-color" content="{{site.basecolor}}"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	{%- if page.title -%}
 	<title>{{ page.title }}</title>
 	<meta name=" title" content={{ page.title }}>
@@ -44,5 +44,11 @@
 		<meta property="twitter:image" content={{ site.url }}/assets/images/{{ page.open }}> {% endif %} <link
 		rel="stylesheet" href="{{'/assets/main.css' | prepend: site.baseurl}}">
 
+	<!-- OWL Carousel-->
+	<link rel="stylesheet" href="/assets/vendor/owl.carousel.min.css" />
+	<link rel="stylesheet" href="/assets/vendor/owl.theme.default.min.css" />
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 </head>
