--- a/_includes/neighbors.html
+++ b/_includes/neighbors.html
@@ -1,18 +1,54 @@
 <div class="neighbors-container" id="neighbors_ticker">
     <div class="ticker">
-        <div class="ticker__item">
+        <div class="item">
             neighbors
         </div>
-        <div class="ticker__item">
+        <div class="item">
             helping
         </div>
-        <div class="ticker__item">
+        <div class="item">
             neighbors
         </div>
-        <div class="ticker__item">
+        <div class="item">
             helping
         </div>
-        <div class="ticker__item">
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
+            neighbors
+        </div>
+        <div class="item">
+            helping
+        </div>
+        <div class="item">
             neighbors
         </div>
     </div>
