--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -24,10 +24,20 @@ $bam-orange: #FF6E2E;
 	min-height: 100vh;
 }
 
+.font-grif-bold {
+	font-family: "grifter-bold";
+}
+
 .link {
 	text-transform: uppercase;
 	font-family: "grifter-bold";
 	font-size: 20px;
+
+	display: flex;
+
+	span:first-child {
+		margin-right: 10px;
+	}
 
 	&:hover {
 		cursor: pointer;
@@ -142,72 +152,130 @@ body {
 	font-style: italic;
 }
 
-.sig {
+// .sig {
 
-	text-align: center;
-	svg {
-		width: ($gap * 2);
-		height: ($gap * 2);
-		@media (max-width: $breakpoint) {
-			width: ($gap * 1.5);
-			height: ($gap * 1.5);
-		}
-	}
-}
+// 	text-align: center;
+// 	svg {
+// 		width: ($gap * 2);
+// 		height: ($gap * 2);
+// 		@media (max-width: $breakpoint) {
+// 			width: ($gap * 1.5);
+// 			height: ($gap * 1.5);
+// 		}
+// 	}
+// }
 
 
-sidebar {
-	@include fadeInDown;
-	@media (min-width: $breakpoint) {
-		height: 100vh;
-		position: sticky;
-		top: -1;
-		padding: $gap 0;
-		display: grid;
-		grid-template-rows: $logo 1fr;
-		grid-gap: $gap;
-		nav {
-			align-self: end;
-		}
-	}
-	nav {
-		ul {
-			padding-left: 0;
-			   list-style: none;
+// sidebar {
+// 	@include fadeInDown;
+// 	@media (min-width: $breakpoint) {
+// 		height: 100vh;
+// 		position: sticky;
+// 		top: -1;
+// 		padding: $gap 0;
+// 		display: grid;
+// 		grid-template-rows: $logo 1fr;
+// 		grid-gap: $gap;
+// 		nav {
+// 			align-self: end;
+// 		}
+// 	}
+// 	nav {
+// 		ul {
+// 			padding-left: 0;
+// 			   list-style: none;
 			 
-			@media (max-width: $breakpoint) {
-				text-align: center;
-				li {
-					display: inline-block;
-					margin-top: ($gap / 2);
-					margin-left: 5px;
-				}
-			}
-		}
-	}
+// 			@media (max-width: $breakpoint) {
+// 				text-align: center;
+// 				li {
+// 					display: inline-block;
+// 					margin-top: ($gap / 2);
+// 					margin-left: 5px;
+// 				}
+// 			}
+// 		}
+// 	}
 
-}
+// }
 
 /*****
  * Nav
 ******/
 nav {
+	background-color: #EFF5FA;
 	font-family: "grifter-bold";
-	padding-right: 50px !important;
+	padding: 5px !important;
+	border-bottom: 4px solid black;
+
+	@media only screen and (min-width: 1024px) {
+		padding-right: 50px !important;
+	}
+	
 
 	#nav_logo {
 		position: relative;
 		left: 30px;
+
+		@media only screen and (max-width: 375px) {
+			width: 75px;
+		}
+	}
+
+	#logo_container {
+		@media only screen and (max-width: 375px) {
+			margin-left: -17px;
+		}
+	}
+
+	#collapse_btn {
+		background-image: url('./../assets/images/menu.svg');
+		background-repeat: no-repeat;
+	}
+
+	a {
+		&:hover {
+			cursor: pointer;
+		};
 	}
 
 	ul {
-		width: 42%;
-		justify-content: space-between;
+		width: 58%;
+		@media only screen and (min-width: 376px) {
+			justify-content: space-between;
+		}
+
+		@media only screen and (max-width: 375px) {
+			width: 100%;
+			background-color: black;
+			position: fixed;
+			height: 100%;
+			top: 0;
+			left: 0;
+			padding-top: 100px;
+			padding-left: 10px !important;
+		}
+
+		.close-btn {
+			position: absolute;
+			left: 314px;
+			top: 35px;
+
+			@media only screen and (min-width: 376px) {
+				display: none;
+			}
+		}
+
 		li {
+
 			a {
 				border-bottom: none !important;
 				color: black !important;
 				font-size: 18px;
+
+				@media only screen and (max-width: 375px) {
+					color: white !important;
+					font-size: 56px;
+				}
 
 				&:hover,
 				&.active {
@@ -216,8 +284,17 @@ nav {
 			}
 		}
 	}
+
+	.right-btn-container {
+		display: flex;
+		align-items: center;
+	}
 	
 	.eng-span-container {
+		@media only screen and (max-width: 375px) {
+			margin-right: 30px;
+		}
+
 		display:flex;
 
 		font-size: 18px;
@@ -250,20 +327,35 @@ nav {
 /*****
  * Header Pane
 ******/
+.header-container {
+	@media only screen and (max-width: 1024px) {
+		margin-top: 65px;
+	}
+}
 #header_pane {
 	background-image: url("/assets/images/bam-tag.svg");
 	background-repeat: no-repeat;
 	background-position: 923px 494px;
 
 	.title {
-		font-size: 140px;
-		line-height: 140px;
 		font-family: "grifter-bold";
+		font-size: 68px;
+		line-height: 82px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 140px;
+			line-height: 140px;
+		}
 	}
 
 	.subtitle {
-		font-size: 20px;
-		width: 77%;
+		width: 94%;
+		font-size: 18px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 20px;
+			width: 77%;
+		}
 	}
 
 	.learn-more {
@@ -277,34 +369,6 @@ nav {
  * Neighbors Ticker
 ******/
 
-$duration: 30s;
-
-@-webkit-keyframes ticker {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    visibility: visible;
-  }
-
-  100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-@keyframes ticker {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    visibility: visible;
-  }
-
-  100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
 #neighbors_ticker {
 	display: flex;
 	border-top: 5px solid black;
@@ -316,15 +380,6 @@ $duration: 30s;
 		display: flex;
 		white-space: nowrap;
 		box-sizing: content-box;
-
-		// -webkit-animation-iteration-count: infinite; 
-		// 		animation-iteration-count: infinite;
-		// -webkit-animation-timing-function: linear;
-		// 		animation-timing-function: linear;
-		// -webkit-animation-name: ticker;
-		// 		animation-name: ticker;
-		// -webkit-animation-duration: 15s;
-		// 		animation-duration: 15s;
 
 
 		.item {
@@ -344,6 +399,10 @@ $duration: 30s;
 	background-image: url("/assets/images/volunteer.svg");
 	background-repeat: no-repeat;
 	background-position: 97% 100%;
+	@media only screen and (max-width: 375px) {
+		background-size: 145px;
+	}
+
 }
 
 
@@ -354,7 +413,7 @@ $duration: 30s;
 	max-width: 95%;
     margin-right: auto;
 	margin-left: auto;
-	margin-top: 200px;
+	margin-top: 8em;
 }
 
 #pics_carousel {
@@ -369,7 +428,7 @@ $duration: 30s;
 	.img-container {
 		position: absolute;
 		width: 96%;
-		height: 96%;
+		// height: 96%;
 		background: blue;
 		border: 5px solid black;
 		overflow: hidden;
@@ -377,7 +436,7 @@ $duration: 30s;
 
 	.item-bg {
 		width: 95%;
-		height: 94%;
+		height: 74%;
 		position: absolute;
 		background: #AECEE6;
 		z-index: -1;
@@ -420,13 +479,25 @@ $duration: 30s;
 	// width: 1110px;
 	color: #000000;
 	font-family: "grifter-bold";
-	font-size: 60px;
+	
 	font-weight: bold;
 	letter-spacing: -0.35px;
-	line-height: 80px;
+
+	font-size: 48px;
+	line-height: 56px;
+
+	@media only screen and (min-width: 1024px) {
+		font-size: 60px;
+		line-height: 80px;
+	}
+	
 
 	&.network {
-		padding-top: 175px;
+		padding-top: 2em;
+
+		@media only screen and (min-width: 1024px) {
+			padding-top: 3em;
+		}
 	}
 }
 
@@ -437,27 +508,75 @@ $duration: 30s;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
-	.logo {
-		margin-right: 30px;
+	position: relative;
+
+	@media only screen and (max-width: 576px) {
+		overflow: hidden;
 	}
 
+	.logo {
+		position: absolute;
+	}
+
+	&#volunteer {
+		.logo {
+			right: -35px;
+			top: 42px;
+
+			@media only screen and (min-width: 1024px) {
+				right: 1020px;
+    			top: -41px;
+			}
+		}
+	}
+
+	&#assistance {
+		margin-top: 4em;
+
+		@media only screen and (min-width: 1024px) {
+			margin-top: 0;
+		}
+		.logo {
+			left: 163px;
+			top: -66px;
+			
+			@media only screen and (min-width: 1024px) {
+				left: 59px;
+    			top: 74px;
+			}
+		}
+	}
+	
+	
+
 	.text-container {
-		width: 65%;
+		@media only screen and (min-width: 1024px) {
+			width: 65%;
+		}
 	}
 
 	.title {
-		font-size: 60px;
+		font-size: 48px;
+		line-height: 56px;
 		font-family: "grifter-bold";
 
+		@media only screen and (min-width: 1024px) {
+			font-size: 60px;
+		}
+		
 		.underline {
 			border-bottom: 8px solid $bam-orange;
 		}
 	}
 
 	.text {
-		font-size: 20px;
-		line-height: 30px;
+		font-size: 18px;
+		line-height: 32px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 20px;
+			line-height: 30px;
+		}
 	}
 }
 
@@ -470,10 +589,23 @@ $duration: 30s;
 #footer {
 	color: white;
 	background: #1C1C1C;
-	margin-top: 165px;
+	margin-top: 100px;
+
+	@media only screen and (min-width: 1024px) {
+		margin-top: 165px;
+	}
+	
 	padding-top: 77px;
-	padding-right: 50px;
-	padding-left: 50px;
+
+	@media only screen and (max-width: 577px) {
+		padding-bottom: 50px;
+	}
+
+	@media only screen and (min-width: 376px) {
+		padding-right: 50px;
+		padding-left: 50px;
+	}
+
 	position: relative;
 
 	.pointing-img {
@@ -490,6 +622,11 @@ $duration: 30s;
 		font-size: 60px;
 		line-height: 70px;
 		font-family: "grifter-bold";
+
+		@media only screen and (max-width: 1024px) {
+			font-size: 30px;
+			line-height: 40px;
+		}
 	}
 
 	.subtitle {
@@ -497,8 +634,7 @@ $duration: 30s;
 	}
 
 	.donate-container {
-		display: flex;
-		justify-content: center;
+		justify-content: space-evenly;
 	}
 
 	.donate {
@@ -527,16 +663,242 @@ $duration: 30s;
 		border-top: 1px solid white;
 
 		.links-container {
-			span:not(:last-child) {
+			.link:not(:last-child) {
 				margin-right: 50px;
 			}
+
+			&:last-child {
+				@media only screen and (max-width: 576px) {
+					margin-top: 75px;
+				}
+			}
+
+			&:last-child {
+				@media only screen and (min-width: 1172px) {
+					width: 50%;
+					justify-content: space-between;
+				}
+
+				@media only screen and (min-width: 1485px) {
+					width: 40%;
+					justify-content: space-between;
+				}
+			}
+
+			&:first-child {
+				@media only screen and (min-width: 1172px) {
+					width: 24%;
+					justify-content: space-between;
+				}
+			}
 		}
-		span {
+		.footer-link {
 			opacity: .7;
 			font-family: "grifter-bold";
-			font-size: 16px;
-			text-decoration: underline;
+			font-size: 18px;
 
+			@media only screen and (min-width: 577px) {
+				font-size: 16px;
+			}
+
+			@media only screen and (min-width: 1024px) {
+				margin-top: 16px
+			}
+
+			&:not(.no-underline) {
+				text-decoration: underline;
+			}
+
+			&:hover {
+				cursor: pointer;
+			}
+
+			&:not(:first-child) {
+				@media only screen and (max-width: 576px) {
+					margin-top: 30px
+				}
+			}
+		}
+	}
+
+	.logo-container {
+		text-align: center;
+
+		svg {
+			width: 375px;
+			height: 140px;
+		}
+	}
+}
+
+
+
+/*****
+ * Footer
+******/
+#about {
+	margin-top:100px;
+
+	@media only screen and (min-width: 1500px) {
+		max-width: 1440px;
+	}
+	@media only screen and (max-width: 1499px) {
+		max-width: 1250px;
+	}
+	@media only screen and (max-width: 1025px) {
+		max-width: 1000px;
+	}
+
+	margin: 100px auto 0 auto;
+
+	.about-container {
+		@media only screen and (max-width: 990px) {
+			width: 100%;
+			padding-right: 15px;
+			padding-left: 15px;
+			margin-right: auto;
+			margin-left: auto;
+		}
+		.row {
+			@media only screen and (min-width: 577px) {
+				justify-content: space-evenly;
+			}
+		}
+	}
+
+	.header {
+		.title {
+			font-size: 48px;
+
+			@media only screen and (min-width: 1024px) {
+				font-size: 100px;
+			}
+		}
+
+		.subtitle {
+			font-size: 22px;
+			line-height: 36px;
+
+			@media only screen and (min-width: 1024px) {
+				font-size: 24px;
+				line-height: 42px;
+			}
+		}
+
+		.text {
+			font-size: 18px;
+			line-height: 32px;
+
+			@media only screen and (min-width: 1024px) {
+				font-size: 20px;
+				line-height: 36px;
+			}
+		}
+	}
+	
+	.content-container {
+		position: relative;
+
+		#community_image {
+			top: -9%;
+			left: 71%;
+			width: 117px;
+			position: absolute;
+			z-index: -1;
+
+			@media only screen and (min-width: 1024px) {
+				top: 6%;
+				left: 65%;
+			}
+		}
+	}
+
+	.connect {
+		position: relative;
+
+		@media only screen and (min-width: 1024px) {
+			padding-left: 92px;
+		}
+
+		.connect-text {
+			font-size: 24px;
+			line-height: 38px;
+
+			@media only screen and (min-width: 1024px) {
+				font-size: 36px;
+				line-height: 46px;
+			}
+		}
+
+		.link {
+			font-size: 20px;
+		}
+	}
+
+	#connect_img {
+		position: absolute;
+		left: 0;
+		top: 1000px;
+		width: 111px;
+
+		@media only screen and (min-width: 1024px) {
+			left: 0;
+			top: 1000px;
+		}
+	}
+}
+
+
+
+/*****
+ * Mission Dropdowns
+******/
+.mission {
+	// margin-left: 65px;
+
+	.title {
+		font-size: 24px;
+		line-height: 38px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 50px;
+		}
+	}
+}
+.drop-section {
+	border-bottom: 3px solid black;
+
+	@media only screen and (min-width: 1024px) {
+		border-bottom: 5px solid black;
+	}
+	
+	&:first-child {
+		border-top: 3px solid black;
+
+		@media only screen and (min-width: 1024px) {
+			border-top: 5px solid black;
+		}
+	}
+
+	p {
+		font-size: 18px;
+		line-height: 32px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 20px;
+			line-height: 36px;
+		}
+	}
+
+	.plus-img {
+		width: 17px;
+	}
+
+	.head {
+		width: 100%;
+		justify-content: space-between;
+		
+		img {
 			&:hover {
 				cursor: pointer;
 			}
