shrinking logo on scroll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@ layout: default
 	<main id="content">
 		<nav class="navbar navbar-expand-lg sticky-top">
 			<a href="/" id="logo_container">
-				{% include logoSVG.html %}
+				<!-- {% include logoSVG.html %} -->
+				<img id="logo_main" class="nav-logo active" src="./assets/images/BAM.svg">
+				<img id="logo_hands" class="nav-logo hands" src="./assets/images/logo_hands.svg">
 			</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav m-auto">
