--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -212,16 +212,36 @@ nav {
 	}
 	
 
-	#nav_logo {
-		position: relative;
+	.nav-logo {
+		position: absolute;
 		left: 30px;
+		width: 75px;
+		opacity: 0;
 
-		@media only screen and (max-width: 375px) {
-			width: 75px;
+		&.hands {
+			width: 65px;
+		}
+
+		&.active {
+			opacity: 1;
+		}
+
+		transition: opacity .5s;
+
+		@media only screen and (min-width: 577px) {
+			width: 95px;
 		}
 	}
 
 	#logo_container {
+		height: 100px;
+
+		&.scrolled {
+			height: 52px;
+		}
+		
+		transition: height .5s;
+
 		@media only screen and (max-width: 375px) {
 			margin-left: -17px;
 		}
@@ -892,6 +912,10 @@ nav {
 
 	.plus-img {
 		width: 17px;
+
+		@media only screen and (min-width: 1024px) {
+			width: 28px;
+		}
 	}
 
 	.head {
