hooking up links, fixing about issue with posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@ layout: default
 		<nav class="navbar navbar-expand-lg sticky-top">
 			<a href="/" id="logo_container">
 				<!-- {% include logoSVG.html %} -->
-				<img id="logo_main" class="nav-logo active" src="./assets/images/BAM.svg">
-				<img id="logo_hands" class="nav-logo hands" src="./assets/images/logo_hands.svg">
+				<img id="logo_main" class="nav-logo active" src="assets/images/BAM.svg">
+				<img id="logo_hands" class="nav-logo hands" src="assets/images/logo_hands.svg">
 			</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav m-auto">
@@ -19,13 +19,13 @@ layout: default
 						  <a class="nav-link" href="/about">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="volunteer_btn" data-toggle="collapse" data-target="#navbarSupportedContent">Volunteer</a>
+						<a href="https://bit.ly/BAM-sign-up" class="nav-link">Volunteer</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="assistance_btn">Request Assistance</a>
+						<a href="https://bit.ly/BAMrequest" class="nav-link" id="assistance_btn">Request Assistance</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="donate_btn">Donate</a>
+						<a href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">Donate</a>
 					</li>
 				</ul>
 			</div>
